cyber-governor/deploy/overlays/enterprise/mtls-mesh.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cybersecuritygovernor
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cg-mtls-mesh
  namespace: cybersecuritygovernor
spec:
  host: "*.cybersecuritygovernor.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
